--- a/src/zines/zine_history.html
+++ b/src/zines/zine_history.html
@@ -83,7 +83,7 @@
     <p class="bi">1960-e</p>
     <p class="t tt4">Самиздат в СССР. СССР аналогом зинов стал самиздат&nbsp;&mdash; подпольные издания, через которые
       люди делились запрещёнными
-      произведениями, идеями и&nbsp;мнениями, избегая цензуры. Самиздат стал символом свободы мысли  и&nbsp;борьбы
+      произведениями, идеями и&nbsp;мнениями, избегая цензуры. Самиздат стал символом свободы мысли и&nbsp;борьбы
       с&nbsp;пропагандой.
     </p>
 
@@ -94,7 +94,7 @@
 
     <p class="bi bi2">1970-е</p>
     <p class="t tt4">Панк-зины и DIY-культура. В&nbsp;эпоху панк-движения зины стали способом протеста против системы
-       и&nbsp;массовой культуры. Такие зины как
+      и&nbsp;массовой культуры. Такие зины как
       Sniffin&rsquo; Glue открыто выражали идеи независимости и&nbsp;стали голосом целого поколения. Они вдохновили
       людей
       создавать свои медиа.</p>
@@ -133,7 +133,7 @@
       </a>
     </div>
   </div>
-
+  </div>
 </body>
 
 </html>
