--- a/src/zines.html
+++ b/src/zines.html
@@ -66,7 +66,7 @@
               <p>Скачать модуль</p>
             </div>
           </a>
-          <a href="https://telegram.me/share/url?url=prozine.adc.ac&text=Взгляните на эту отличную страницу"
+          <a href="https://telegram.me/share/url?url=prozine.adc.ac/zines.html&text=Смотри, какой классный материал вышел у prozine!"
             target="_blank">
             <div class="but_share"></div>
           </a>
