--- a/src/creation.html
+++ b/src/creation.html
@@ -97,7 +97,7 @@
         </div>
       </a>
 
-      <a href="./creation.html/fonts.html">
+      <a href="./creation/fonts.html">
         <div class="t t1">
           <div class="cov1"></div>
           <!-- <img class="cov" src="./images/module/c_2.png"> -->
