--- a/src/tools.html
+++ b/src/tools.html
@@ -68,7 +68,7 @@
           <p class="naz">Одностраничный зин</p>
           <div class="tags">
             <div class="tag coll l t1">3&nbsp&nbspСоздание зинов для бренда</div>
-            <a href="./images/materials/Шаблон многостраничного зина.indd" download="prozine_template_book.indd">
+            <a href="./images/materials/Шаблон одностраничного зина.indd" download="prozine_template_book.indd">
               <div class="download"></div>
             </a>
           </div>
@@ -81,7 +81,7 @@
           <p class="naz">Многостраничный зин</p>
           <div class="tags">
             <div class="tag coll l t2">3&nbsp&nbspСоздание зинов для бренда</div>
-            <a href="./images/materials/Шаблон одностраничного зина.indd" download="prozine_template_list.indd">
+            <a href="./images/materials/Шаблон многостраничного зина.indd" download="prozine_template_list.indd">
               <div class="download"></div>
             </a>
           </div>
